<resources>
    <string name="app_name">Açken Sen Sen Değilsin :)</string>
    <string name="login">Giris</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="register">Hesabınız Yoksa Burdan Kaydolun</string>
    <string name="customer">Müşteri</string>
    <string name="waiter">Garson</string>
    <string name="name_surname">İsim Soyisim</string>
    <string name="register_button">Kayıt Ol</string>
    <string name="welcome">Hosgeldiniz</string>
    <string name="welcome_customer">Hoşgeldiniz</string>
    <string name="welcome_waiter">Hoşgeldiniz</string>
    <string name="meal">Yiyecek</string>
    <string name="dessert">Tatlı</string>
    <string name="drink">İçecek</string>
    <string name="fast_food">Fast Food</string>
    <string name="confirm">Onayla</string>
    <string name="totalAmount">Toplam :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credit_card">Kredi Kartı</string>
    <string name="cash">Nakit</string>
    <string name="price_that_will_pay">Ödenecek Miktar</string>
    <string name="enter_money">Para gir</string>
    <string name="card_number_text">Kart Numarası</string>
    <string name="date_text">Tarih</string>
    <string name="cvv_text">CVV</string>
    <string name="address">Adres</string>
    <string name="carrier">Kurye</string>
    <string name="comment">Yorum</string>
    <string name="telefon">Telefon</string>
    <string name="eve_siparis">Eve Siparis</string>
    <string name="ekle">Ekle</string>
    <string name="yorum">Yorum</string>
</resources>