<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_arkaplan">


    <Button
        android:id="@+id/kfast_food_button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:text="@string/fast_food"
        android:textColor="#BA094F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/common_google_signin_btn_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/kdrink_button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/drink"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kfast_food_button" />

    <Button
        android:id="@+id/kdessert_button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:text="@string/dessert"
        android:textColor="#EF0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kdrink_button" />

    <Button
        android:id="@+id/kmeal_button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:text="@string/meal"
        android:textColor="#59FF1D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kdessert_button"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/kconfirm_button"
        android:layout_width="268dp"
        android:layout_height="91dp"
        android:background="@color/material_on_surface_stroke"
        android:text="@string/confirm"
        android:textColor="#F57C00"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kmeal_button"
        app:layout_constraintVertical_bias="0.313" />


</androidx.constraintlayout.widget.ConstraintLayout>