<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kredikart_arkaplan"
    tools:context=".CreditCardFragment">


    <EditText
        android:id="@+id/card_number"
        android:digits="0123456789"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:hint="@string/card_number_text"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/date_number"
        android:digits="0123456789/"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/date_text"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:maxLength="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cvv_number"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_number"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cvv_number"
        android:digits="0123456789"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="104dp"
        android:ems="10"
        android:hint="@string/cvv_text"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_number"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/confirm_credit_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorLink="#2B1A1A"
        android:textSize="16sp"
        app:backgroundTint="@color/material_on_primary_disabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvv_number" />

    <TextView
        android:id="@+id/success_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_credit_card_button"
        app:layout_constraintVertical_bias="0.168"
        android:onClick="guvenlik"
        tools:ignore="OnClick" />
</androidx.constraintlayout.widget.ConstraintLayout>